After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 136086 - a cell border is not saved in the xls format if the cell is empty
a cell border is not saved in the xls format if the cell is empty
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export MS Excel (tm)
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-03-03 17:45 UTC by Frederic Parrenin
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
The .gnumeric file to reproduce the problem (1.60 KB, application/x-gnumeric)
2004-03-03 17:46 UTC, Frederic Parrenin
Details

Description Frederic Parrenin 2004-03-03 17:45:21 UTC
If the cell content is empty, the cell border is not saved in the xls format.

To reproduce the problem, open the gnumeric file I will attach, saved it as
an xls one, and re-open it.
Comment 1 Frederic Parrenin 2004-03-03 17:46:11 UTC
Created attachment 25112 [details]
The .gnumeric file to reproduce the problem
Comment 2 Frederic Parrenin 2004-05-09 08:23:39 UTC
This bug has been fixed by Jody.