http://bugzilla.gnome.org/show_bug.cgi?id=136086 optimization was a bit

2004-04-22  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=136086
	* ms-excel-write.c (excel_sheet_write_DBCELL) : optimization was a bit
	  optimistic.  Even if there are no values, we still need to export
	  rows with visible formating (borders, backgrounds, ...)

2004-04-22  Jody Goldberg <jody@gnome.org>

	* src/sheet-autofill.c (autofill_cell) : Assign the value format in
	  all cases accept expressions.  Use cell_set_value, not
	  sheet_cell_set_value so that we can assign the format before we
	  render, and to avoid doing things piece meal.